[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/hud/input_hints/interact_hint_bg.png" type="Texture" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/gui/icons/interact_icon.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/input_hints/interact_hint.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="interact_hint" type="Node2D"]
z_index = 2
script = ExtResource( 4 )

[node name="mobile_interact_hint" type="Node2D" parent="."]
visible = false

[node name="interact_hint" type="AnimatedSprite" parent="mobile_interact_hint"]
position = Vector2( -9, -9 )
frames = SubResource( 13 )
playing = true
centered = false

[node name="Sprite" type="Sprite" parent="mobile_interact_hint/interact_hint"]
position = Vector2( 1, 1 )
texture = ExtResource( 3 )
centered = false

[node name="desktop_interact_hint" type="Node2D" parent="."]
visible = false

[node name="interact_hint" type="AnimatedSprite" parent="desktop_interact_hint"]
position = Vector2( -9, -9 )
frames = SubResource( 13 )
frame = 1
playing = true
centered = false

[node name="key_label" type="Label" parent="desktop_interact_hint/interact_hint"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
text = "E"
align = 1
valign = 1
